functional test fine tune, we are at 118/136 - see #100

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ wilma-functionaltest/gradle
 wilma-functionaltest/gradlew*
 wilma-functionaltest/resources/src/**/*.class
 wilma-functionaltest/resources/preCompiled/*.class
+wilma-functionaltest/resources/preCompiled/*.jar
 wilma-functionaltest/classes
 browsermob-proxy/gradlew
 browsermob-proxy/gradlew.bat
