--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -30,13 +30,12 @@ dependencies {
     compile project(':wilma-application:wilma-properties')
 
     //local mitmProxy build
-    compile('com.epam.mitm:mitmJavaProxy:0.11-beta-wilma-2.0.DEV') {
+    compile('com.epam.mitm:mitmJavaProxy:2.0-0.14.13') {
         exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
     }
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    //testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile (group: 'io.netty', name: 'netty-all', version: '4.1.51.Final')
     testCompile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.31.v20200723'
 }
