--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -29,9 +29,11 @@ dependencies {
     compile project(':wilma-application:wilma-core')
     compile project(':wilma-application:wilma-properties')
 
-    //local mitmProxy build
-    compile('com.epam.mitm:mitmJavaProxy:2.0-0.14.13') {
+    compile('org.rockhill.mitm:mitmJavaProxy:2.0.17.57') {
+        exclude(group: 'ch.qos.logback', module: 'logback-classic')
         exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
+        exclude(group: 'org.lsf4j', module: 'jcl-over-lsf4j')
+        exclude(group: 'org.lsf4j', module: 'jul-to-lsf4j')
     }
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
