update mitmProxy part

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,8 @@
 .project
 .classpath
 .checkstyle
-wilma-application/modules/wilma-engine/log
+**/log/
 wilma-application/modules/wilma-engine/messages
-wilma-message-search/modules/wilma-message-search-engine/log
 wilma-message-search/modules/wilma-message-search-engine/indexes/
 *.iml
 *.ipr
