.net api service dll published / updated to version 2.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ wilma-test/wilma-test-client/gradle
 wilma-test/wilma-test-client/gradlew*
 wilma-service-api/gradle
 wilma-service-api/gradlew*
-wilma-service-api-net/wilma-service-api/nuget.exe
 wilma-application/modules/wilma-engine/config
+#ignore .NET specific files
+wilma-service-api-net/wilma-service-api/nuget.exe
+*.snk
+.vs/
 
