--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,19 @@ ext {
     mockitoCoreVersion = '3.3.3'
 }
 
+def versionPropsFile = file('version.properties')
+
+if (versionPropsFile.canRead()) {
+    def Properties versionProps = new Properties()
+    versionProps.load(new FileInputStream(versionPropsFile))
+    def code = versionProps['VERSION_CODE'].toInteger() + 1
+    versionProps['VERSION_CODE']=code.toString()
+    versionProps.store(versionPropsFile.newWriter(), null)
+}
+else {
+    throw new GradleException("Could not read version.properties!")
+}
+
 apply from: 'common.gradle'
 
 subprojects {
