--- a/wilma-application/modules/wilma-engine/build.gradle
+++ b/wilma-application/modules/wilma-engine/build.gradle
@@ -23,9 +23,11 @@ apply plugin: 'application'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 buildscript {
-    repositories { jcenter() }
+    repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
+    }
     dependencies {
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
     }
 }
 
