--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -24,7 +24,6 @@ repositories {
 
 dependencies {
     compile project(':wilma-application:wilma-stub-configuration-domain')
-    //compile "com.epam.gepard:gepard-core:4.0.35"
     compile "junit:junit:4.12"
     compile 'gsbase:gsbase:2.0'
     compile 'jakarta-regexp:jakarta-regexp:1.4'
@@ -36,13 +35,14 @@ dependencies {
     compile 'org.springframework:spring-core:4.1.3.RELEASE'
     compile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
-    compile 'org.custommonkey.xmlunit:com.springsource.org.custommonkey.xmlunit:1.2.0'
     compile 'commons-io:commons-io:2.4'
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
     compile project(':wilma-service-api')
 //    compile "com.epam.wilma:wilma-service-api:$version"
     compile 'com.github.everit-org.json-schema:org.everit.json.schema:1.9.1'
+    implementation 'org.xmlunit:xmlunit-core:2.8.2'
+    implementation 'org.xmlunit:xmlunit-matchers:2.8.2'
 }
 
 sourceSets {
