preparing api signing - from now on build works only with -PossrhUsername=foo -PossrhPassword=bar -xsignArchives parameters

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ ext {
     jUnitVersion = '4.13.1'
     mockitoAllVersion = '1.10.19'
     mockitoCoreVersion = '3.3.3'
+    componentName='wilma'
 }
 
 def versionPropsFile = file('version.properties')
